# smart-keyboard

./: .gitignore  CONFIGURATION.md  Cargo.toml  HARDWARE_REQS.md  INSTALL.md  README.md  config.toml  keymap_de.toml  keymap_fr.toml  keymap_ua.toml  keymap_us.toml
.cargo/: config.toml
.github/: copilot-instructions.md
src/: config.rs  display.rs  gamepad.rs  gpio.rs  keyboards.rs  main.rs  menu.rs  narrator.rs  output.rs  phys_keyboard.rs  user_input.rs
