[package]
name = "smart-keyboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "smart-keyboard"
path = "src/main.rs"

[dependencies]
fltk = { version = "1.5.22", features = ["use-wayland"] }
gpio-cdev = "0.6"
libc = "0.2.183"
serde = { version = "1", features = ["derive"] }
serialport = "4"
toml = "0.8"
