[package]
name = "smart-keyboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "smart-keyboard"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
gpio-cdev = "0.6"
libc = "0.2.183"
serde = { version = "1", features = ["derive"] }
serialport = "4"
toml = "0.8"
